Add Snake, 2048, and Space Shooter games to Hub

--- a/index.html
+++ b/index.html
@@ -148,12 +148,30 @@
             <div class="icon">🧩</div>
         </a>
 
-        <a href="clicker/index.html" class="game-card card-clicker">
+        <a href="snake/index.html" class="game-card card-clicker"
+            style="border-color: #0f0; box-shadow: 0 0 15px #0f0;">
             <div class="game-info">
-                <div class="title">CYBER HACK</div>
-                <div class="desc">Idle Tycoon Sim</div>
+                <div class="title" style="color:#0f0">NEON SNAKE</div>
+                <div class="desc">Classic Snake Game</div>
             </div>
-            <div class="icon">💻</div>
+            <div class="icon">🐍</div>
+        </a>
+
+        <a href="2048/index.html" class="game-card card-clicker" style="border-color: #ff0; box-shadow: 0 0 15px #ff0;">
+            <div class="game-info">
+                <div class="title" style="color:#ff0">NEON 2048</div>
+                <div class="desc">Logic Puzzle</div>
+            </div>
+            <div class="icon">🔢</div>
+        </a>
+
+        <a href="spaceshooter/index.html" class="game-card card-clicker"
+            style="border-color: #0ff; box-shadow: 0 0 15px #0ff;">
+            <div class="game-info">
+                <div class="title" style="color:#0ff">SPACE WAR</div>
+                <div class="desc">Action Shooter</div>
+            </div>
+            <div class="icon">🚀</div>
         </a>
 
     </div>
