Add Home buttons to all games

--- a/snake/index.html
+++ b/snake/index.html
@@ -76,6 +76,8 @@
 
 <body>
     <div id="score-board">SCORE: <span id="score">0</span></div>
+    <a href="../index.html"
+        style="position:absolute; top:10px; left:10px; color:#fff; text-decoration:none; font-size:24px; border:1px solid #fff; padding:5px 10px; border-radius:5px;">🏠</a>
     <canvas id="game" width="400" height="400"></canvas>
 
     <div class="controls">
