--- a/tetris/index.html
+++ b/tetris/index.html
@@ -62,7 +62,9 @@
 
         <div class="audio-controls">
             <button id="btn-sound" class="neon-btn small-btn">SOUND: ON</button>
-            <p class="tiny-text">Add 'music.mp3' to folder for BGM</p>
+            <a href="../index.html" class="neon-btn small-btn"
+                style="text-decoration:none; display:inline-block; font-size: 0.8rem; border-color: #fff; color: #fff;">🏠
+                MENU</a>
         </div>
 
     </div>
