--- a/spaceshooter/index.html
+++ b/spaceshooter/index.html
@@ -24,10 +24,14 @@
             position: absolute;
             top: 10px;
             left: 10px;
+            width: 95%;
             color: #0ff;
             font-size: 20px;
             text-shadow: 0 0 5px #0ff;
             pointer-events: none;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
         }
 
         #start-screen {
@@ -66,11 +70,24 @@
             background: #0ff;
             color: #000;
         }
+
+        .menu-btn {
+            pointer-events: all;
+            color: #fff;
+            text-decoration: none;
+            border: 1px solid #fff;
+            padding: 5px 10px;
+            font-size: 16px;
+            background: rgba(0, 0, 0, 0.5);
+        }
     </style>
 </head>
 
 <body>
-    <div id="ui">SCORE: <span id="score">0</span> | HP: <span id="hp">3</span></div>
+    <div id="ui">
+        <div>SCORE: <span id="score">0</span> | HP: <span id="hp">3</span></div>
+        <a href="../index.html" class="menu-btn">🏠 MENU</a>
+    </div>
     <canvas id="game"></canvas>
 
     <div id="start-screen">
