--- a/index.html
+++ b/index.html
@@ -174,6 +174,15 @@
             <div class="icon">🚀</div>
         </a>
 
+        <a href="hextris/index.html" class="game-card card-clicker"
+            style="border-color: #e74c3c; box-shadow: 0 0 15px #e74c3c;">
+            <div class="game-info">
+                <div class="title" style="color:#e74c3c">HEXTRIS</div>
+                <div class="desc">Hexagonal Fast Puzzle</div>
+            </div>
+            <div class="icon">🔻</div>
+        </a>
+
     </div>
 
 </body>
