--- a/neon.html
+++ b/neon.html
@@ -52,7 +52,7 @@
 	<script type='text/javascript' src="vendor/keypress.min.js"></script>
 	<script type='text/javascript' src="vendor/jquery.js"></script>
 	<script type='text/javascript' src="js/save-state.js"></script>
-	<script type='text/javascript' src="js/view.js"></script>
+	<script type='text/javascript' src="js/view.js?v=2"></script>
 	<script type='text/javascript' src="js/wavegen.js"></script>
 	<script type='text/javascript' src="js/math.js"></script>
 	<script type='text/javascript' src="js/Block.js"></script>
