--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang='en' id="DEPLOYED_AT_0120">
 
 <head>
-	<title>NEON</title>
+	<title>HELLO WORLD</title>
 	<meta name="description" content="An addictive puzzle game inspired by Tetris.">
 	<link rel="manifest" href="manifest.webmanifest">
 	<meta name="apple-itunes-app" content="app-id=903769553" />
